--- a/about.html
+++ b/about.html
@@ -7,12 +7,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Pedicure a Beauty Category Flat Bootstrap Responsive Website Template | About :: w3layouts</title>
+<title>ELEONORA PARIS. Косметология</title>
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Pedicure Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<meta name="keywords" content="Косметология, Косметология Москва, боток, мезотерапия, пилинг, растяжки, подтяжка, лифтинг, омоложение, красота, молодость, разгладить морщины, поднять глаза" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- custom-theme css files -->
@@ -22,6 +21,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!-- font-awesome-icons -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 <!-- //font-awesome-icons -->
 
 <!-- googlefonts -->
@@ -34,36 +34,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!--/main-header-->
 <div class="baner">
+	<div class="demo-inner-content">
 	
 	<!--/banner-info-->
-	  <div class="header">
+	 	  <div class="header">
 		<div class="w3-agile-logo">
 			<div class="container">
-				<div class=" head-wl">
+				<div class="head-wl">
 					<div class="headder-w3">
-						<h1><a href="index.html">Pedicure</a></h1>
+						<h1><a href="index.html"><img src="images/logo.png"></a></h1>
 					</div>
-
-					<div class="w3-header-top-right-text">
-						<h6 class="caption"> Contact Us</h6>
-						<p>(111)+245 245 66</p>
-					</div>
-
-					<div class="email-right">
-						<h6 class="caption">Email Us</h6>
-						<p><a href="mailto:mail@example.com" class="info"> info@example.com</a></p>
-
-					</div>
-
 
 					<div class="agileinfo-social-grids">
-						<h6 class="caption">Follow Us</h6>
+						<h6 class="caption">Связаться:</h6>
 						<ul>
-							<li><a href="#"><span class="fa fa-facebook"></span></a></li>
-							<li><a href="#"><span class="fa fa-twitter"></span></a></li>
-							<li><a href="#"><span class="fa fa-rss"></span></a></li>
-							<li><a href="#"><span class="fa fa-vk"></span></a></li>
+							<li><a href="tel: +79670470205"><i class="fas fa-phone fa-2x"></i></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=79670470205">
+							<i class="fab fa-whatsapp fa-2x"></i></a></li>
+							<li><a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane fa-2x"></i></a></li>
+							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope fa-2x"></i></a></li>
 						</ul>
+					</div>
+					<div class="agileinfo-social-grids">
+						<h6 class="caption">Я в соцсетях:</h6>
+						<ul>
+							<li><a href="https://www.facebook.com/eleonora.paris.98">
+								<i class="fab fa-facebook-f fa-2x"></i></a></li>
+							<li><a href="https://www.instagram.com/eleonora_paris_kosmetolog/">
+								<i class="fab fa-instagram fa-2x"></i></a></li>
+							<li><a href="https://vk.com/eleonora_paris"><span class="fab fa-vk fa-2x"></span></a></li>
+						</ul>
+					</div>
 					</div>
 
 					<div class="clearfix"> </div>
@@ -87,192 +88,99 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav ">
-						<li><a href="index.html">Home</a></li>
-						<li class="active"><a href="about.html">About</a></li>
-						<li><a href="services.html">Services</a></li>
-						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
+						<li class="active"><a href="index.html">Главная</a></li>
+						<li><a href="about.html">Обо мне</a></li>
+						<!-- <li><a href="gallery.html">Галлерея</a></li> -->
+						<li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Услуги <span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="icons.html">Web Icons</a></li>
-								<li><a href="codes.html">Short Codes</a></li>
+								<li><a href="icons.html">Эстетическая косметология</a></li>
+								<li><a href="codes.html">Инъекционная косметология</a></li>
 							</ul>
 						</li> 
-						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
+			
 			</div>
 			<div class="clearfix"> </div>
 			</nav>	
 		</div>
 	  </div>
+		<div class="w3-banner-head-info">
+				<div class="container">
+				</div>
+		</div>
 			<!--/banner-info-->
-</div>
+	</div>
  <!--/banner-section-->
  <!-- about inner -->
 <div class="about-bottom inner-padding">
 	<div class="container">
-			<h3 class="heading-agileinfo">About Us<span>Skin,Nails and Beauty Services</span></h3>
+			<h3 class="heading-agileinfo blackcolor">Обо Мне<span>Косметология - моё призвание</span></h3>
+				
+				<div class="clearfix"> </div>
+					<div class="col-md-3 agile_team_grid">
+						<div class="view view-sixth">
+							<img src="images/t1.jpg" alt=" " class="img-responsive">
+						</div>
+					<h4>Eleonora Paris</h4>
+					<p>Косметолог - эстетист</p>
+				</div>
 				<div class="about-bott-right">
-					 <h5>Who We Are</h5>
-					 <p>Masagni dolores eoquie int Basmodi temporant, ut laboreas dolore magnam aliquam kuytase uaeraquis autem vel eum iure reprehend.Unicmquam eius, Basmodi temurer sehsMunim.Masagni dolores eoquie int Basmodi temporant, ut laboreas dolore magnam aliquam kuytase uaeraquis autem vel eum iure reprehend.</p>
+					 <p>Я сертифицированный косметолог - эстетист, занимаюсь косметологией уже более 5 лет.
+					 Оказываю широкий спектр косметологических услуг, таких как: Инъекции ботокса, Пилинги, и прочее </p>
 				</div>
-				<div class="clearfix"> </div>
-			</div>
 </div>
-<div class="wthree-mid">
-		<div class="container">
-			<h3>Nisl amet dolor sit ipsum veroeros sed blandit</h3>
-			<p>Standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
-			<div class="botton">
-				<a class="join-wthree" href="#" data-toggle="modal" data-target="#myModal">Read More
-						<i class="fa fa-hand-o-right" aria-hidden="true"></i>
-					</a>
+<div class="container">
+			<div class="inner_sec_info_agileits_w3">
+              <h3 class="heading-agileinfo blackcolor">Контакты<span>Для консультации, записи на приём, а так же по вопросам сотрудничества, можете связаться со мной любым из удобных способов связи:</span></h3>
 			</div>
-		</div>
+		<div class="contact agile_team_grid">
+			<p>
+			<ul>
+				<li><a href="tel: +79670470205"><i class="fas fa-phone"></i></a>&nbsp;&nbsp;&nbsp;Звонок</li>
+				<li><a href="https://api.whatsapp.com/send?phone=79670470205">
+			<i class="fab fa-whatsapp"></i></a>&nbsp;&nbsp;&nbsp;Написать в Whatsapp</li>
+				<li><a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane"></i></a>&nbsp;&nbsp;&nbsp;Написать в Telegram
+				</li>
+				<li><a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope"></i></a>&nbsp;&nbsp;&nbsp;Отправить email</li>
+			</ul></p>
 	</div>
-<!-- //about inner -->
-<!-- Team -->
-<div class="team">
-		<div class="container">
-		<h3 class="heading-agileinfo">our beuticians<span>Skin,Nails and Beauty Services</span></h3>
-			<div class="agile_team_grids">
-				<div class="col-md-3 agile_team_grid">
-					<div class="view view-sixth">
-						<img src="images/t1.jpg" alt=" " class="img-responsive">
-						<div class="mask">
-							<h5>Lorem Ipsum</h5>
-							<div class="agileits_social_icons">
-								<ul class="social_agileinfo">
-									<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#" class="w3_instagram"><i class="fa fa-instagram"></i></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<h4>Daniel</h4>
-					<p>Facial</p>
-				</div>
-				<div class="col-md-3 agile_team_grid">
-					<div class="view view-sixth">
-						<img src="images/t2.jpg" alt=" " class="img-responsive">
-						<div class="mask">
-							<h5>Lorem Ipsum</h5>
-							<div class="agileits_social_icons">
-								<ul class="social_agileinfo">
-									<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#" class="w3_instagram"><i class="fa fa-instagram"></i></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<h4>Mary Winkler</h4>
-					<p>Regular Wax</p>
-				</div>
-				<div class="col-md-3 agile_team_grid">
-					<div class="view view-sixth">
-						<img src="images/t3.jpg" alt=" " class="img-responsive">
-						<div class="mask">
-							<h5>Lorem Ipsum</h5>
-							<div class="agileits_social_icons">
-								<ul class="social_agileinfo">
-									<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#" class="w3_instagram"><i class="fa fa-instagram"></i></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<h4>James Mac</h4>
-					<p>Threading</p>
-				</div>
-				<div class="col-md-3 agile_team_grid">
-					<div class="view view-sixth">
-						<img src="images/t4.jpg" alt=" " class="img-responsive">
-						<div class="mask">
-							<h5>Lorem Ipsum</h5>
-							<div class="agileits_social_icons">
-								<ul class="social_agileinfo">
-									<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#" class="w3_instagram"><i class="fa fa-instagram"></i></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<h4>Smith Carls</h4>
-					<p>Mani-Pedi</p>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
 		</div>
-	</div>
-	<!-- //Team -->
+		<!-- /map -->
+			<div class="map_w3layouts_agile">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d49274.41385337911!2d37.63410732036928!3d55.754484029654975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1567334086236!5m2!1sru!2sru" style="border:0"></iframe>
+		<!-- //map -->
 
-<!-- Subscribe -->
-	<div class="wthree-subscribef-w3ls">
-		<div class="container">
-			<h3 class="tittlef-agileits-w3layouts white-clrf">Get All Special Offers!</h3>
-			<p class="white-clrf">Sign up for our newsletter and get all the latest tips and tricks to polish your nails at a good rate!</p>
-			<div class="footer_w3layouts_gridf_right">
-				<form action="#" method="post">
-					<input type="email" name="Email" placeholder="Email address..." required="">
-					<input type="submit" value="Submit">
-					<div class="clearfix"></div>
-				</form>
-			</div>
-		</div>
-	</div>
-	<!--// Subscribe -->
 	<!-- footer -->
-	<div class="footer_top_agileits">
-		<div class="container">
-			<div class="col-md-4 footer_grid">
-				<h3>About Us</h3>
-				<p>Nam libero tempore cum vulputate id est id, pretium semper enim. Morbi viverra congue nisi vel pulvinar posuere sapien
-					eros.
-				</p>
-			</div>
-			<div class="col-md-4 footer_grid">
-				<h3>Latest News</h3>
-				<ul class="footer_grid_list">
-					<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						<a href="#" data-toggle="modal" data-target="#myModal">Lorem ipsum neque vulputate </a>
-					</li>
-					<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						<a href="#" data-toggle="modal" data-target="#myModal">Dolor amet sed quam vitae</a>
-					</li>
-					<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						<a href="#" data-toggle="modal" data-target="#myModal">Lorem ipsum neque, vulputate </a>
-					</li>
-					<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						<a href="#" data-toggle="modal" data-target="#myModal">Dolor amet sed quam vitae</a>
-					</li>
-					<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						<a href="#" data-toggle="modal" data-target="#myModal">Lorem ipsum neque, vulputate </a>
-					</li>
-				</ul>
-			</div>
-			<div class="col-md-4 footer_grid">
-				<h3>Contact Info</h3>
-				<ul class="address">
-					<li><i class="fa fa-map-marker" aria-hidden="true"></i>8088 USA, Honey block, <span>New York City.</span></li>
-					<li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
-					<li><i class="fa fa-phone" aria-hidden="true"></i>+09187 8088 9436</li>
-				</ul>
-			</div>
-			<div class="clearfix"> </div>
-			
-		</div>
-	</div>
 	<div class="footer_w3ls">
 		<div class="container">
 					<div class="footer_bottom1">
-						<p>© 2018 Pedicure. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+						<div class=" head-wl">
+					<div class="agileinfo-social-grids">
+						<h6 class="caption">Связаться:</h6>
+						<ul>
+							<li><a href="tel: +79670470205"><i class="fas fa-phone fa-2x"></i></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=79670470205">
+							<i class="fab fa-whatsapp fa-2x"></i></a></li>
+							<li><a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane fa-2x"></i></a></li>
+							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope fa-2x"></i></a></li>
+						</ul>
 					</div>
+					<div class="agileinfo-social-grids">
+						<h6 class="caption">Я в соцсетях:</h6>
+						<ul>
+							<li><a href="https://www.facebook.com/eleonora.paris.98">
+								<i class="fab fa-facebook-f fa-2x"></i></a></li>
+							<li><a href="https://www.instagram.com/eleonora_paris_kosmetolog/">
+								<i class="fab fa-instagram fa-2x"></i></a></li>
+							<li><a href="https://vk.com/eleonora_paris"><span class="fab fa-vk fa-2x"></span></a></li>
+						</ul>
+					</div>
+					</div>
+					<p>© 2019 Eleonora Paris</p>
 		</div>
 	</div>
+</div>
 	<!-- //footer -->
 <!-- bootstrap-modal-pop-up -->
 	<div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
