--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Pedicure Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<meta name="keywords" content="Косметология, Косметология Москва, боток, мезотерапия, пилинг, растяжки, подтяжка, лифтинг, омоложение, красота, молодость, разгладить морщины, поднять глаза" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 		
@@ -36,30 +35,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 <body>
 <!--/main-header-->
-<div id="demo-1" data-zs-src='["images/b3.jpg", "images/b2.jpg", "images/b1.jpg"]' data-zs-overlay="dots">
+<div class="baner">
 	<div class="demo-inner-content">
 	
 	<!--/banner-info-->
-	  <div class="header">
+	 	  <div class="header">
 		<div class="w3-agile-logo">
 			<div class="container">
-				<div class=" head-wl">
+				<div class="head-wl">
 					<div class="headder-w3">
-						<h1><a href="index.html">ELEONORA PARIS</a></h1>
+						<h1><a href="index.html"><img src="images/logo.png"></a></h1>
 					</div>
 
-					<div class="w3-header-top-right-text">
-						<h6 class="caption"> Позвонить</h6>
-						<p><a href="tel: +79670470205" class="info">+7 (967) 047 02 05</a></p>
+					<div class="agileinfo-social-grids">
+						<h6 class="caption">Связаться:</h6>
+						<ul>
+							<li><a href="tel: +79670470205"><i class="fas fa-phone fa-2x"></i></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=79670470205">
+							<i class="fab fa-whatsapp fa-2x"></i></a></li>
+							<li><a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane fa-2x"></i></a></li>
+							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope fa-2x"></i></a></li>
+						</ul>
 					</div>
-
-					<div class="email-right">
-						<h6 class="caption">Отправить email</h6>
-						<p><a href="mailto:mail@example.com" class="info"> eleonora.paris@pm.me</a></p>
-
-					</div>
-
-
 					<div class="agileinfo-social-grids">
 						<h6 class="caption">Я в соцсетях:</h6>
 						<ul>
@@ -69,6 +66,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<i class="fab fa-instagram fa-2x"></i></a></li>
 							<li><a href="https://vk.com/eleonora_paris"><span class="fab fa-vk fa-2x"></span></a></li>
 						</ul>
+					</div>
 					</div>
 
 					<div class="clearfix"> </div>
@@ -93,16 +91,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav ">
 						<li class="active"><a href="index.html">Главная</a></li>
-						<li><a href="about.html">Кто Я</a></li>
-						<li><a href="services.html">ХЗ</a></li>
-						<li><a href="gallery.html">Галлерея</a></li>
+						<li><a href="about.html">Обо мне</a></li>
+						<!-- <li><a href="gallery.html">Галлерея</a></li> -->
 						<li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Услуги <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="icons.html">Эстетическая косметология</a></li>
 								<li><a href="codes.html">Инъекционная косметология</a></li>
 							</ul>
 						</li> 
-						<li><a href="contact.html">Контакты</a></li>
 					</ul>
 				</div>
 			
@@ -113,20 +109,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	  </div>
 		<div class="w3-banner-head-info">
 				<div class="container">
-				   <div class="banner-text">
-						<h2>Красота - это образ жизни...
-                         <span>с нами это приятно</span></h2>
-					
-					</div>
 				</div>
 		</div>
 			<!--/banner-info-->
 	</div>
-</div>
  <!--/banner-section-->
  <!-- About us -->
 	<div class="about-3">
-		<h3 class="heading-agileinfo">Москва<span>Косметологические услуги</span></h3>
+		<h3 class="heading-agileinfo blackcolor">Москва<span>Косметологические услуги</span></h3>
 		<div class="container">
 			<div class="d-flex">
 				
@@ -218,7 +208,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										</table>
 										<br><br>
 										<div class="more">
-											<a href="contact.html">Book Now</a>				
+											<a href="contact.html">Записаться</a>				
 										</div>
 									</div>
 								</div>
@@ -231,7 +221,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="clients">
 <div class="container">
 	<div class="wthree_head_section">
-				<h3 class="heading-agileinfo">Testimonials<span>Skin,Nails and Beauty Services</span></h3>
+				<h3 class="heading-agileinfo">Отзывы благодарных клиентов<span></span></h3>
 				</div>
 		
 			
@@ -240,30 +230,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="slides">
 						<li>
 							<img src="images/t1.jpg" alt="" />
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation .</p>
+								<p>Огромное спасибо за качественную работу, теперь мои губы восторгают всех!</p>
 								<div class="client">
-									<h5>Gerald Roy</h5>
+									<h5>Карина Абрамова</h5>
 								</div>
 						</li>
 						<li>
 							<img src="images/t2.jpg" alt="" />
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation .</p>
+								<p>Хочу отметить высокий профессионализм Элеоноры в своей работе</p>
 								<div class="client">
-									<h5>Adam Brandom</h5>
+									<h5>Анна Беличенко</h5>
 								</div>
 						</li>
 						<li>
 							<img src="images/t3.jpg" alt="" />
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation .</p>
+								<p>Элеонора эксперт в своей отрасли, всем крайне рекомендую</p>
 								<div class="client">
-									<h5>Steve Artur</h5>
+									<h5>Оксана Пуденкова</h5>
 								</div>
 						</li>
 						<li>
 							<img src="images/t4.jpg" alt="" />
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation .</p>
+								<p>Провела курс мезотерапии и на месте моих "трёх волосинок" снова вьються густые волосы</p>
 								<div class="client">
-									<h5>Martin Victor</h5>
+									<h5>Мария Захарова</h5>
 								</div>
 						</li>
 					</ul>
@@ -278,10 +268,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="footer_w3ls">
 		<div class="container">
 					<div class="footer_bottom1">
-						<p>© 2019 Eleonora Paris</p>
+						<div class=" head-wl">
+					<div class="agileinfo-social-grids">
+						<h6 class="caption">Связаться:</h6>
+						<ul>
+							<li><a href="tel: +79670470205"><i class="fas fa-phone fa-2x"></i></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=79670470205">
+							<i class="fab fa-whatsapp fa-2x"></i></a></li>
+							<li><a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane fa-2x"></i></a></li>
+							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope fa-2x"></i></a></li>
+						</ul>
 					</div>
+					<div class="agileinfo-social-grids">
+						<h6 class="caption">Я в соцсетях:</h6>
+						<ul>
+							<li><a href="https://www.facebook.com/eleonora.paris.98">
+								<i class="fab fa-facebook-f fa-2x"></i></a></li>
+							<li><a href="https://www.instagram.com/eleonora_paris_kosmetolog/">
+								<i class="fab fa-instagram fa-2x"></i></a></li>
+							<li><a href="https://vk.com/eleonora_paris"><span class="fab fa-vk fa-2x"></span></a></li>
+						</ul>
+					</div>
+					</div>
+					<p>© 2019 Eleonora Paris</p>
 		</div>
 	</div>
+</div>
 	<!-- //footer -->
 <!-- bootstrap-modal-pop-up -->
 	<div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
