--- a/about.html
+++ b/about.html
@@ -48,20 +48,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="agileinfo-social-grids">
 						<h6 class="caption">Связаться:</h6>
 						<ul>
-							<li><a href="tel: +79670470205"><i class="fas fa-phone fa-2x"></i></a></li>
+							<li><a href="tel: +79670470205"><i class=" green fas fa-phone fa-2x"></i></a></li>
 							<li><a href="https://api.whatsapp.com/send?phone=79670470205">
-							<i class="fab fa-whatsapp fa-2x"></i></a></li>
+							<i class="green fab fa-whatsapp fa-2x"></i></a></li>
 							<li><a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane fa-2x"></i></a></li>
-							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope fa-2x"></i></a></li>
+							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="white far fa-envelope fa-2x"></i></a></li>
 						</ul>
 					</div>
 					<div class="agileinfo-social-grids">
 						<h6 class="caption">Я в соцсетях:</h6>
 						<ul>
+							<li><a href="https://www.instagram.com/eleonora_paris_kosmetolog/">
+								<i class="red fab fa-instagram fa-2x"></i></a></li>	
 							<li><a href="https://www.facebook.com/eleonora.paris.98">
 								<i class="fab fa-facebook-f fa-2x"></i></a></li>
-							<li><a href="https://www.instagram.com/eleonora_paris_kosmetolog/">
-								<i class="fab fa-instagram fa-2x"></i></a></li>
 							<li><a href="https://vk.com/eleonora_paris"><span class="fab fa-vk fa-2x"></span></a></li>
 						</ul>
 					</div>
@@ -88,8 +88,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav ">
-						<li class="active"><a href="index.html">Главная</a></li>
-						<li><a href="about.html">Обо мне</a></li>
+						<li><a href="index.html">Главная</a></li>
+						<li class="active"><a href="about.html">Обо мне</a></li>
 						<!-- <li><a href="gallery.html">Галлерея</a></li> -->
 						<li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Услуги <span class="caret"></span></a>
 							<ul class="dropdown-menu">
@@ -137,10 +137,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="contact agile_team_grid">
 			<p>
 			<ul>
-				<li><a href="tel: +79670470205"><i class="fas fa-phone"></i></a>&nbsp;&nbsp;&nbsp;Звонок</li>
+				<li><a href="tel: +79670470205"><i class="green fas fa-phone"></i></a>&nbsp;&nbsp;&nbsp;Звонок</li>
 				<li><a href="https://api.whatsapp.com/send?phone=79670470205">
-			<i class="fab fa-whatsapp"></i></a>&nbsp;&nbsp;&nbsp;Написать в Whatsapp</li>
-				<li><a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane"></i></a>&nbsp;&nbsp;&nbsp;Написать в Telegram
+			<i class="green fab fa-whatsapp"></i></a>&nbsp;&nbsp;&nbsp;Написать в Whatsapp</li>
+				<li><a href="https://tlgg.ru/eleonoraparis"><i class="blue fab fa-telegram-plane"></i></a>&nbsp;&nbsp;&nbsp;Написать в Telegram
 				</li>
 				<li><a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope"></i></a>&nbsp;&nbsp;&nbsp;Отправить email</li>
 			</ul></p>
@@ -159,20 +159,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="agileinfo-social-grids">
 						<h6 class="caption">Связаться:</h6>
 						<ul>
-							<li><a href="tel: +79670470205"><i class="fas fa-phone fa-2x"></i></a></li>
+							<li><a href="tel: +79670470205"><i class=" green fas fa-phone fa-2x"></i></a></li>
 							<li><a href="https://api.whatsapp.com/send?phone=79670470205">
-							<i class="fab fa-whatsapp fa-2x"></i></a></li>
+							<i class="green fab fa-whatsapp fa-2x"></i></a></li>
 							<li><a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane fa-2x"></i></a></li>
-							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope fa-2x"></i></a></li>
+							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="white far fa-envelope fa-2x"></i></a></li>
 						</ul>
 					</div>
 					<div class="agileinfo-social-grids">
 						<h6 class="caption">Я в соцсетях:</h6>
 						<ul>
+							<li><a href="https://www.instagram.com/eleonora_paris_kosmetolog/">
+								<i class="red fab fa-instagram fa-2x"></i></a></li>	
 							<li><a href="https://www.facebook.com/eleonora.paris.98">
 								<i class="fab fa-facebook-f fa-2x"></i></a></li>
-							<li><a href="https://www.instagram.com/eleonora_paris_kosmetolog/">
-								<i class="fab fa-instagram fa-2x"></i></a></li>
 							<li><a href="https://vk.com/eleonora_paris"><span class="fab fa-vk fa-2x"></span></a></li>
 						</ul>
 					</div>
