--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 					<div class="agileinfo-social-grids">
 						<h6 class="caption">Связаться:</h6>
-						<ul>
-							<li><a href="tel: +79670470205"><i class="fas fa-phone fa-2x"></i></a></li>
+												<ul>
+							<li><a href="tel: +79670470205"><i class=" green fas fa-phone fa-2x"></i></a></li>
 							<li><a href="https://api.whatsapp.com/send?phone=79670470205">
-							<i class="fab fa-whatsapp fa-2x"></i></a></li>
+							<i class="green fab fa-whatsapp fa-2x"></i></a></li>
 							<li><a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane fa-2x"></i></a></li>
-							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope fa-2x"></i></a></li>
+							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="white far fa-envelope fa-2x"></i></a></li>
 						</ul>
 					</div>
 					<div class="agileinfo-social-grids">
 						<h6 class="caption">Я в соцсетях:</h6>
 						<ul>
+							<li><a href="https://www.instagram.com/eleonora_paris_kosmetolog/">
+								<i class="red fab fa-instagram fa-2x"></i></a></li>	
 							<li><a href="https://www.facebook.com/eleonora.paris.98">
 								<i class="fab fa-facebook-f fa-2x"></i></a></li>
-							<li><a href="https://www.instagram.com/eleonora_paris_kosmetolog/">
-								<i class="fab fa-instagram fa-2x"></i></a></li>
 							<li><a href="https://vk.com/eleonora_paris"><span class="fab fa-vk fa-2x"></span></a></li>
 						</ul>
 					</div>
@@ -272,20 +272,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="agileinfo-social-grids">
 						<h6 class="caption">Связаться:</h6>
 						<ul>
-							<li><a href="tel: +79670470205"><i class="fas fa-phone fa-2x"></i></a></li>
+							<li><a href="tel: +79670470205"><i class=" green fas fa-phone fa-2x"></i></a></li>
 							<li><a href="https://api.whatsapp.com/send?phone=79670470205">
-							<i class="fab fa-whatsapp fa-2x"></i></a></li>
+							<i class="green fab fa-whatsapp fa-2x"></i></a></li>
 							<li><a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane fa-2x"></i></a></li>
-							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope fa-2x"></i></a></li>
+							<li><a href="mailto: eleonora.paris@protonmail.com"><i class="white far fa-envelope fa-2x"></i></a></li>
 						</ul>
 					</div>
 					<div class="agileinfo-social-grids">
 						<h6 class="caption">Я в соцсетях:</h6>
 						<ul>
+							<li><a href="https://www.instagram.com/eleonora_paris_kosmetolog/">
+								<i class="red fab fa-instagram fa-2x"></i></a></li>	
 							<li><a href="https://www.facebook.com/eleonora.paris.98">
 								<i class="fab fa-facebook-f fa-2x"></i></a></li>
-							<li><a href="https://www.instagram.com/eleonora_paris_kosmetolog/">
-								<i class="fab fa-instagram fa-2x"></i></a></li>
 							<li><a href="https://vk.com/eleonora_paris"><span class="fab fa-vk fa-2x"></span></a></li>
 						</ul>
 					</div>
